--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ stages:
 cache:
   key: ${CARTRIDGE_CLI_VERSION}-${BUNDLE_VERSION}
   paths:
-    - packages/
+    - packages/*
 
 docker-build-base:
   stage: prebuild
@@ -62,6 +62,7 @@ docker-build-base:
       else
         cp packages/${TARANTOOL_VERSION}/* .
       fi
+
     - molecule test
 
 test-enterprise:
