ADG-73 Add Altlinux to supported distributions

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Check distribution
   fail:
     msg: 'Deploy to {{ ansible_os_family }} distributions is not supported yet'
-  when: ansible_os_family not in ["RedHat", "Debian"]
+  when: ansible_os_family not in ["RedHat", "Debian", "Altlinux"]
   tags: always
 
 - name: Set remote_user for delegated tasks
